<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.out.OutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/out_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/out_state_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:mstbPrimaryColor="@color/colorPrimary"
                app:mstbSecondaryColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/out_out_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/out_out_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/outing_time"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/out_out_date_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="yyyy-MM-dd hh:mm"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:id="@+id/out_out_date_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/ripple"
                            android:elevation="1dp"
                            android:text="@string/outing_date"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/out_out_time_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/ripple"
                            android:elevation="1dp"
                            android:text="@string/outing_time"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/out_in_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/out_in_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="복귀 시간"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/out_in_date_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="yyyy-MM-dd hh:mm"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <Button
                            android:id="@+id/out_in_date_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/ripple"
                            android:elevation="1dp"
                            android:text="@string/in_date"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/out_in_time_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/ripple"
                            android:elevation="1dp"
                            android:text="@string/in_time"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/out_reason_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/out_reason_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="이유" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/out_apply_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/apply"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>